--- a/messages/install.txt
+++ b/messages/install.txt
@@ -4,8 +4,8 @@ Find documentation in Sublime Text by Mehdy Dara (mdara@eleven-labs.com).
 
 How to configure
 ================
-The default shortcut to call the plugin is : (`ctrl + shift + d`).
-The default used url is : (`http://devdocs.io/#q=%s`).
+The default shortcut to call the plugin is : (ctrl + alt + d).
+The default used url is : (http://devdocs.io/#q=%s).
 
 But you can set multiple shortcuts and urls by your key bindings.
 
@@ -13,6 +13,9 @@ Examples :
 	{ "keys": ["ctrl+alt+d"], "command": "find_doc_selection", "args" : {"url" : "http://devdocs.io/#q=%s"} }
 	{ "keys": ["ctrl+alt+g"], "command": "find_doc_selection", "args" : {"url" : "http://google.fr/search?q=%s"} }
 	{ "keys": ["ctrl+alt+k"], "command": "find_doc_selection", "args" : {"url" : "http://php.net/%s"} }
+Others examples : you can open cheat sheet or what do you want
+    { "keys": ["ctrl+alt+c"], "command": "find_doc_selection", "args" : {"url" : "http://www.cheatography.com/fredv/cheat-sheets/gmail-cheat-sheet/"} }
+    { "keys": ["ctrl+alt+n"], "command": "find_doc_selection", "args" : {"url" : "http://www.nyan.cat/"} }
 
 How to use
 ==========
@@ -23,4 +26,4 @@ Support
 =======
 If you have some problems or improvements, [contact me](https://github.com/zckrs/sublime_findDoc/issues) via GitHub.
 
-Regards Mehdy Dara
+Regards, Mehdy Dara
