add example on how to use key binding context
key binding context are useful when you want to use the same shortcut but
do differents things based on the context. In the example, you can see
that the shortcut `ctrl+alt+d` will open "devdocs.io" if you are editing a
Python file, and the same shortcut will open "developer.mozilla.org" if
you are editing a JavaScript file. This way, you don't have to bind and to
remember X shortcuts for the X languages you know :)

--- a/messages/install.txt
+++ b/messages/install.txt
@@ -17,6 +17,43 @@ Others examples : you can open cheat sheet or what do you want
     { "keys": ["ctrl+alt+c"], "command": "find_doc_selection", "args" : {"url" : "http://www.cheatography.com/fredv/cheat-sheets/gmail-cheat-sheet/"} }
     { "keys": ["ctrl+alt+n"], "command": "find_doc_selection", "args" : {"url" : "http://www.nyan.cat/"} }
 
+You can also use the same shorcut but do differents action based on the current context:
+
+    // this is the default key binding
+    {
+        "keys": ["ctrl+alt+d"],
+        "command": "find_doc_selection",
+        "args" : {"url" : "http://devdocs.io/#q=%s"}
+    }
+
+    // you need to put context-specific key binding after the default
+    // context-based key binding for Python code...
+    {
+        "keys": ["ctrl+alt+d"],
+        "command": "find_doc_selection",
+        "args" : {"url" : "http://devdocs.io/#q=python%%20%s"},
+        "context": [
+            {
+                "key":      "selector",
+                "operator": "equal",
+                "operand":  "source.python"
+            }
+        ]
+    }
+    // another one for JavaScript code...
+    {
+        "keys": ["ctrl+alt+d"],
+        "command": "find_doc_selection",
+        "args" : {"url" : "https://developer.mozilla.org/fr/search?q=%s"},
+        "context": [
+            {
+                "key":      "selector",
+                "operator": "equal",
+                "operand":  "source.js"
+            }
+        ]
+    }
+
 How to use
 ==========
 Highlight the function to search, use the shortcut and valid the url in prompt.
